improve toggle GUI